make images behave correctly on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,6 @@ body {
 
 header {
 	background-color: #00313D;
-	/*background-image: url("{{ relURL "/assets/header.svg" }}");*/
 
 	height: 32rem;
 	max-height: 100vh;
@@ -146,6 +145,10 @@ header .bar .sponsor {
 	text-align: justify;
 	text-justify: inter-word;
 	order: 1;
+}
+
+.main img {
+	max-width: 100%;
 }
 
 .col {
